WindGroup Dev/src/objects/Planned_Maintenance_Item__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Toilet</fullName>
                </value>
                <value>
                    <fullName>Lift</fullName>
                </value>
                <value>
                    <fullName>Escalator</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipLabel>Planned Maintenance Items</relationshipLabel>
        <relationshipName>Planned_Maintenance_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Planned Maintenance Items</relationshipLabel>
        <relationshipName>Planned_Maintenance_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Planned Maintenance Items</relationshipLabel>
        <relationshipName>Planned_Maintenance_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Maintenance__c</fullName>
        <label>Planned Maintenance</label>
        <referenceTo>Planned_Maintenance__c</referenceTo>
        <relationshipLabel>Planned Maintenance Items</relationshipLabel>
        <relationshipName>Planned_Maintenance_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Planned Maintenance Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Planned Maintenance Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planned Maintenance Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>